--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="centered-main-page-element">
+    <header class="header">
+      <img class="img" src="./eisenhower-matrix.jpg">
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
       <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
+        <label class="new-task-title" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task" type="text">
+          <button class="button add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
+      <h3 class="">Todo</h3>
+      <ul class="list incomplete-tasks">
+        <li class="list-item">
+          <input class="checkbox" type="checkbox">
+          <label class="label-task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="img" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
+        <li class="list-item edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="label-task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="button edit">Save</button>
+          <button class="button delete"><img class="img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
+      <h3 class="">Completed</h3>
+      <ul class="list completed-tasks">
+        <li class="list-item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="label-task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
