--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <h1 class="header__title">ToDo</h1>
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="'Matrix">
       <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,14 +27,14 @@
             <label class="list__label-task">Pay Bills</label>
             <input type="text" class="task">
             <button class="button edit">Edit</button>
-            <button class="button delete"><img class="img" src="./remove.svg"></button>
+            <button class="button delete"><img class="img" src="./remove.svg" alt="Remove"></button>
           </li>
           <li class="list__item edit-mode">
             <input class="list__checkbox" type="checkbox">
             <label class="list__label-task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
             <button class="button edit">Save</button>
-            <button class="button delete"><img class="img" src="./remove.svg"></button>
+            <button class="button delete"><img class="img" src="./remove.svg" alt="Remove"></button>
           </li>
         </ul>
       </section>
@@ -46,7 +46,7 @@
             <label class="list__label-task">See the Doctor</label>
             <input type="text" class="task">
             <button class="button edit">Edit</button>
-            <button class="button delete"><img class="img" src="./remove.svg"></button>
+            <button class="button delete"><img class="img" src="./remove.svg" alt="Remove"></button>
           </li>
         </ul>
       </section>
